Overflow - fixed

--- a/style2.css
+++ b/style2.css
@@ -13,6 +13,7 @@ navbar {
     width: 100%;
     z-index: 2;
     top: 0;
+    overflow: hidden;
 }
 
 .all {
@@ -59,13 +60,11 @@ a {
     width: 45vw;
     border-radius: 10000px;
     background: #F7971E;
-    /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #FFD200, #F7971E);
-    /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #FFD200, #F7971E);
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    z-index: 0;
+    z-index: -1;
     box-shadow: 0 2px 100px hsla(0, 0%, 0%, 0.15);
+    overflow-x: hidden;
 }
 
 .circle2 {
@@ -76,9 +75,8 @@ a {
     width: 45vw;
     border-radius: 10000px;
     background-image: linear-gradient(to top, #00c6fb 0%, #005bea 100%);
-    z-index: 0;
+    z-index: -1;
     box-shadow: 0 2px 100px hsla(0, 0%, 0%, 0.15);
-    overflow: hidden;
 }
 
 /* ----------------- HEADER ---------------------- */
@@ -179,6 +177,7 @@ img {
         grid-column: 2 / 3;
         grid-row: 1 / 2;
         font-size: 10vw;
+        max-width: 200px;
     }
 
     p {
